[gd_scene load_steps=2 format=2]

[ext_resource path="res://Cell3D.gd" type="Script" id=1]

[node name="Cell3D" type="Spatial"]
script = ExtResource( 1 )

[node name="RightPath" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0 )
visible = false
calculate_tangents = false
height = 1.0
depth = 1.0

[node name="LeftPath" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0 )
visible = false
calculate_tangents = false
height = 1.0
depth = 1.0

[node name="UpPath" type="CSGBox" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, -1 )
visible = false
calculate_tangents = false
height = 1.0
depth = 1.0

[node name="DownPath" type="CSGBox" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 1 )
visible = false
calculate_tangents = false
height = 1.0
depth = 1.0

[node name="Unlocked" type="CSGSphere" parent="."]
visible = false
radius = 1.25
radial_segments = 24
